24-China-regions/runtime/multiprocess/results/20260922/cn-north-1/ec2/security-group.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-05c93b76680eb7477",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "Tags": [
        {
          "Key": "Name",
          "Value": "cn-ec2-bench-f5060bb011"
        }
      ],
      "VpcId": "vpc-06e0b7c2406a2073b",
      "SecurityGroupArn": "arn:aws-cn:ec2:cn-north-1:447150580482:security-group/sg-05c93b76680eb7477",
      "OwnerId": "447150580482",
      "GroupName": "cn-ec2-bench-f5060bb011",
      "Description": "SSM-only China region benchmark; no inbound",
      "IpPermissions": []
    }
  ],
  "ResponseMetadata": {
    "RequestId": "3d4b2f60-e45f-4bf4-b93a-af82d52b8d67",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "3d4b2f60-e45f-4bf4-b93a-af82d52b8d67",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "887",
      "date": "Tue, 22 Sep 2026 08:13:03 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
